--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                 <div class="user">
                     <img src="images/pic-1.png" alt="">
                     <div class="info">
-                        <h3>Sanket Panmand</h3>
-                        <span>designer</span>
+                        <h3>RHenry Jou</h3>
+                        <span>Designer</span>
                     </div>
                 </div>
             </div>
@@ -421,8 +421,8 @@
                 <div class="user">
                     <img src="images/pic-2.png" alt="">
                     <div class="info">
-                        <h3>Aniket Khedkar</h3>
-                        <span>designer</span>
+                        <h3>Jelly Lois</h3>
+                        <span>Designer</span>
                     </div>
                 </div>
             </div>
@@ -431,8 +431,8 @@
                 <div class="user">
                     <img src="images/pic-3.png" alt="">
                     <div class="info">
-                        <h3>Divya Adak</h3>
-                        <span>designer</span>
+                        <h3>Prem Khatri</h3>
+                        <span>Designer</span>
                     </div>
                 </div>
             </div>
@@ -441,8 +441,8 @@
                 <div class="user">
                     <img src="images/pic-4.png" alt="">
                     <div class="info">
-                        <h3>Rutik Shingote</h3>
-                        <span>designer</span>
+                        <h3>Lee Sam</h3>
+                        <span>Designer</span>
                     </div>
                 </div>
             </div>
