--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="user">
                     <img src="images/pic-1.png" alt="">
                     <div class="info">
-                        <h3>RHenry Jou</h3>
+                        <h3>Henry Jou</h3>
                         <span>Designer</span>
                     </div>
                 </div>
